# dingding-sdk

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  dingding.cpp  dingding.h
tests/: CMakeLists.txt  test_dingding.cpp
